# domo-pitchfork

./: .clog.toml  .gitignore  Cargo.toml  README.md  changelog.md
domo-pitchfork/: Cargo.toml  README.md
domo-pitchfork-derive/: Cargo.toml
domo-pitchfork-derive/src/: generate_dataset_schema.rs  lib.rs
domo-pitchfork-derive/tests/: dataset.rs
domo-pitchfork/src/: auth.rs  error.rs  lib.rs  pitchfork.rs
domo-pitchfork/src/domo/: activity_log.rs  dataset.rs  group.rs  mod.rs  page.rs  policy.rs  stream.rs  user.rs
domo-pitchfork/src/domo/dashboards/: pages.rs
domo-pitchfork/src/domo/data/: datasets.rs  mod.rs  upload_stream.rs
domo-pitchfork/src/domo/governance/: activity_logs.rs  groups.rs  users.rs
domo-pitchfork/src/util/: csv.rs  mod.rs
domo-pitchfork/tests/: datasets.rs  streams.rs
ripdomo/: Cargo.toml
ripdomo/src/: main.rs  util.rs
ripdomo/src/cmd/: dataset.rs  group.rs  logs.rs  mod.rs  page.rs  stream.rs  user.rs
ripdomo/tests/: test.csv
rusty-pitchfork/: Cargo.toml  README.md
rusty-pitchfork/src/: auth.rs  client.rs  error.rs  lib.rs
rusty-pitchfork/src/domo/: activity_log.rs  dataset.rs  group.rs  mod.rs  page.rs  policy.rs  stream.rs  user.rs
rusty-pitchfork/src/util/: common.rs  mod.rs  streams.rs
rusty-pitchfork/tests/: datasets.rs  streams.rs
src/: auth.rs  error.rs  lib.rs  pitchfork.rs
src/async_domo/: datasets_service.rs  mod.rs  pitchfork.rs  streams_service.rs
src/domo/: activity_log.rs  dataset.rs  group.rs  page.rs  policy.rs  stream.rs  user.rs
src/domo/data/: datasets.rs  mod.rs  stream_upload.rs  streams.rs  upload_stream.rs
src/util/: common.rs  csv.rs  mod.rs  stream.rs  streams.rs  unstable.rs
tests/: datasets.rs  streams.rs  users.rs
