[package]
name = "domo_pitchfork"
version = "2.0.0-alpha.2"
authors = ["Tom Wilson <tom.wilson.pdx@outlook.com>"]
license = "MIT"
readme = "README.md"
description = "Domo API Sdk"
repository = "https://github.com/quantumZebraPDX/domo-pitchfork"
keywords=["Domo"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rustls-tls"]

rust-native-tls = ["reqwest/default-tls", "reqwest/native-tls"]
rust-native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

gzip = ["reqwest/gzip"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
reqwest = { version = "0.10", default-features = false, features = ["json"] }

csv = "1.1"
log = "0.4"

futures-preview = { version = "0.3.0-alpha.19" }

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4"

[dev-dependencies]
doc-comment = "0.3"
tokio = { version = "0.2", default-features=false, features = ["macros"] }
