[package]
name = "domo_pitchfork"
version = "1.5.0-alpha.1"
authors = ["Ryan T. Wilson <tom.wilson.pdx@outlook.com>"]
license = "MIT"
readme = "README.md"
description = "Domo API Sdk"
repository = "https://github.com/TrashPandacoot/domo-pitchfork"
keywords=["Domo"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = { version = "2.1" }
base64 = "0.13"
flate2 = "1"
csv = "1.1"
log = "0.4"

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4"

[dev-dependencies]
doc-comment = "0.3"
smol = "1.2"
