[package]
name = "domo_pitchfork"
version = "1.5.1-alpha.0"
authors = ["Ryan T. Wilson <tom.wilson.pdx@outlook.com>"]
license = "MIT"
readme = "README.md"
description = "Domo API Sdk"
repository = "https://github.com/TrashPandacoot/domo-pitchfork"
keywords=["Domo"]
edition = "2018"

[features]
default = ["default-tls"]

default-tls = ["reqwest/default-tls"]
rust-tls = ["reqwest/rustls-tls"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
flate2 = "1"
csv = "1.1"
log = "0.4"
futures = "0.3"

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4"

[dev-dependencies]
doc-comment = "0.3"
tokio = { version = "1.0", default-features = false, features = ["macros", "net", "time"] }