[package]
name = "domo_pitchfork"
version = "1.0.0"
authors = ["Tom Wilson <tom.wilson.pdx@outlook.com>"]
license = "MIT"
readme = "README.md"
description = "Domo API Sdk"
keywords=["Domo"]
edition = "2018"

[features]
experimental-pitchfork-helpers = ["rayon", "time", "crossbeam", "futures", "tokio-core"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.3"
reqwest = { version = "0.9.13", features = ["default-tls"] }
futures = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }
csv = "1.0"
flate2 = "1.0"
rayon = { version = "1", optional = true }
time = { version = "0.1", optional = true }
crossbeam = { version = "0.7.1", optional = true }
log = "0.4"

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4"
