[package]
name = "rusty_pitchfork"
version = "0.5.2"
authors = ["Tom Wilson <tom.wilson.pdx@outlook.com>"]
license = "MIT"
readme = "README.md"
description = "Domo API Sdk"
keywords=["Domo"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.3"
reqwest = { version = "0.9.11", features = ["default-tls"] }
futures = "0.1"
tokio-core = "0.1"
csv = "1.0"
flate2 = "1.0"
rayon = "1"
time = "0.1"
crossbeam = "0.7.1"
log = "0.4"

[dev-dependencies]
dotenv = "0.13.0"

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4"
